--- a/.github/workflows/docker-publish-prod.yml
+++ b/.github/workflows/docker-publish-prod.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches: [main]
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
