--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   #    ports: ["8080:8080"]
 
   front:
+    container_name: front
     build:
       context: .
       dockerfile: Dockerfile
