--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.9.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slider": "^1.3.6",
